--- a/index.html
+++ b/index.html
@@ -300,18 +300,18 @@
                         <h4 class="modal-title" id="modal-label">about</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Hi, my name is Wilson. I have 6 years’ experience in IT field focused on front-end development. I have worked in different domains such as financial service, insurance and e-commerce. I’m proficient in using HTML5, CSS3, JavaScript, jQuery and Angular.js to build web development.
+                        <p>Hi, my name is Andy. I have 6 years’ experience in IT field focused on front-end development. I have worked in different domains such as IT and telecom. I’m proficient in using HTML5, CSS3, JavaScript, jQuery and Angular.js to build web development.
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">了解了</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
                     </div>
                 </div>
             </div>
         </div>
         <footer>
             <p class="pull-right"><a href="#top">Back to top</a></p>
-            <p>&copy; 2016 Wilson Hong </p>
+            <p>&copy; 2016 Andy Hong </p>
         </footer>
     </div>
     <script src="js/jquery-1.11.1.min.js"></script>
